# Online-Batch-Selection

./: .gitignore  README.md  Voxel51.ipynb  environment-sc.yaml  hpc_submit.py  main.py  new_Voxel51.ipynb  note.txt  notes.txt  pyproject.toml  readme.md  requirements.txt  run.sh  run_all.sh  run_bash_file.sh  run_cifar10.sh  run_cifar100.sh  run_cifar10_minimal_all.sh  run_cifar10_minimal_one.sh  run_minimal.sh  run_mnist.sh  run_mnist_noisy.sh  run_teacher_generated.sh  run_teacher_generated_todd.sh  run_tests.py  save_labels.py  slurm_run_cifar_10.sh  utils.py  wandb-sync-daemon.py
cfg/: FashionMNIST.yaml  MNIST.yaml  cifar10.yaml  cifar100.yaml  cifar100_full.yaml  cifar10_BS.yaml  cifar10_RW.yaml  cifar10_full.yaml  fashion_mnist_full.yaml  mnist.yaml  mnist2.yaml  mnist_full.yaml  mnist_notebook.yaml  svhn_full.yaml  test_cifar10.yaml  test_cifar100.yaml  test_fashion_mnist.yaml  test_mnist.yaml  test_svhn.yaml  tinyimagenet_DivBS_01.yaml
data/: FashionMNIST.py  MNIST.py  Teacher_Generated.p  __init__.py  cifar.py  fashion_mnist.py  makeblobs.py  mnist.py  svhn.py  teacher_generated.py  tinyimagenet.py  twomoons.py
methods/: Bayesian.py  DivBS.py  GradNorm.py  GradNorm.py.rej  GradNormIS.py  NewRhoLoss.py  Optk.py  ReweightMethod.py  RhoLoss.py  RhoLossBPS.py  RhoLossIS.py  RhoLossIS_biased.py  RhoLossIS_unbiased.py  RhoLossRW.py  RhoLossWarmup.py  RhoLoss_Warmup.py  SelectionMethod.py  SelectionMethod.py.rej  TrainLoss.py  Uniform.py  __init__.py
models/: BayesNet.py  LeNet.py  Linear.py  MNIST_cnn.py  ResNet.py  ResNet_torchvision.py  Simple_fc.py  Small_cnn.py  Small_linear.py  TwoLayer.py  __init__.py
notebooks/: Generating_Data.ipynb  cifar3_image_viewer.ipynb  correlations_visualization.ipynb  generating_teacher_model.ipynb  logist_regression.ipynb  plot_spectral_decay.ipynb  randomized_kaczmarz.ipynb  results_pair_hist_visualizer.ipynb  results_ternary_hex_visualizer.ipynb  selected_noisy_points.ipynb  selected_points.ipynb  ternary_anim.py  tester.ipynb  thesis_graphs.ipynb  toy_visualization copy.ipynb  toy_visualization.ipynb
tests/: test_refactoring.py  test_visualization.py
visualization/: Visualization.py  (+6 more)
(+122 files in other folders)
