[project]
name = "online-bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "ema-pytorch>=0.7.7",
    "fiftyone>=1.8.0",
    "ftfy>=6.3.1",
    "matplotlib>=3.10.0",
    "matplotlib-inline",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0.2",
    "regex>=2025.7.33",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9",
    "wandb>=0.21.0",
    "wcwidth>=0.2.13",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
