[project]
name = "online-bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clip",
    "cvxpy>=1.7.2",
    "ema-pytorch>=0.7.7",
    "ftfy>=6.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pre-commit>=4.2.0",
    "pyyaml>=6.0.2",
    "regex>=2025.7.33",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "umap>=0.1.1",
    "wandb>=0.21.0",
    "wcwidth>=0.2.13",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
